# minimal-package-example

./: README.md  requirements.txt  setup.cfg  setup.py
